--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
     "axios": "^0.24.0",
+    "daisyui": "^1.16.2",
     "date-fns": "^2.26.0",
     "next": "^12.0.5-canary.8",
     "next-seo": "^4.28.1",
