--- a/package.json
+++ b/package.json
@@ -19,19 +19,22 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "sass": "^1.43.4",
     "swr": "^1.0.1"
   },
   "devDependencies": {
+    "sass": "^1.43.4",
+    "@emotion/babel-plugin": "^11.3.0",
     "@types/node": "16.11.9",
     "@types/react": "17.0.36",
     "autoprefixer": "^10.4.0",
+    "babel-plugin-macros": "^3.1.0",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
     "eslint-config-prettier": "^8.3.0",
     "postcss": "^8.3.11",
     "prettier": "^2.4.1",
     "tailwindcss": "^2.2.19",
+    "twin.macro": "^2.8.1",
     "typescript": "4.5.2"
   }
 }
